version/0.4.0/engine/multi-stakeholder.md
# 多利益相关者视角框架

**来源**: 固收信贷智能分析引擎 v0.3.0 · 马赛克引擎架构  
**日期**: 2026-07-08  
**性质**: 结构化归档——从已有技能包和规格文档中提取整理

---

## 一、六类利益相关者总览（M0-M5）

框架覆盖六类利益相关者，每类有不同的核心决策问题、决策时域和关键数据需求。

| 编号 | 角色 | 核心问题 | 决策时域 | 优先级 | 状态 |
|---|---|---|---|---|---|
| **M0** | 信贷审批（银行） | 能不能贷？什么价格？ | 1-3年 | P0 | 已完成（轨道A+B） |
| **M1** | 债券投资 | 便宜还是贵？条款保护够不够？流动性好不好？ | 6个月-3年 | **P0** | **已完成（四维框架）** |
| **M2** | 债券承销（DCM） | 能不能卖出去？卖给谁？什么时候发？ | 1-6个月 | P1 | 已规划 |
| **M3** | 市场交易 | 利率环境？信用环境？流动性环境？ | 日内-周度 | P1 | 已规划 |
| **M4** | 组合风控 | 集中度过高？压力情景下损失多大？ | 月度-季度 | P2 | 已规划 |
| **M5** | 企业融资 | 怎么融资？哪个渠道？什么时机？ | 1-5年 | P2 | 已规划 |

### 1.1 各角色的核心约束

| 角色 | 核心约束 |
|---|---|
| **M0 信贷审批** | FTP成本 + 不良率指标 + 抵押覆盖率 + 尽职免责 |
| **M1 债券投资** | 相对排名 + 最大回撤 + 流动性可得性 |
| **M2 债券承销** | 投资人需求匹配 + 发行成功概率 + 可比定价 |
| **M3 市场交易** | VaR限额 + Carry收益 + 对冲工具可得性 |
| **M4 组合风控** | 集中度限额 + 压力测试通过率 + 尾部风险管理 |
| **M5 企业融资** | 融资成本对比 + 期限匹配 + 投资人关系 + 评级管理 |

### 1.2 各角色的关键数据需求

| 角色 | 最关键数据 | 次要数据 | 数据缺口影响 |
|---|---|---|---|
| **M0** | 母公司单体报表（非合并）、抵押物价值、司法执行记录 | 行业政策、区域经济、担保人资质 | 合并报表掩盖母公司真实风险 |
| **M1** | 利差对比（vs同行业/同评级）、条款说明书、流动性指标 | Z-spread/OAS、修正久期、事件日历 | 无Wind终端→无法获取精细利差数据 |
| **M2** | 投资人持仓结构、近期可比发行利率、认购倍数 | 评级迁移趋势、行业情绪指标 | 持仓数据不完整→投资人画像偏概览 |
| **M3** | 资金面指标（DR007/Shibor）、收益率曲线、跨市场联动 | 微观结构数据、做市商报价 | Bid-ask spread不披露→交易成本不可知 |
| **M4** | 组合集中度分布、相关性矩阵、历史回撤 | 压力情景库、尾部风险清单 | 精确RWA计算需银行内部数据 |
| **M5** | 各渠道融资成本曲线、企业资产/负债久期 | 评级机构关注焦点、投资人偏好迁移 | 非公开企业无法获取精确财务数据 |

---

## 二、M1债券投资四维框架（P0 Complete）

M1的评估由四个维度加权构成，每个维度独立评分后加权汇总。

### 2.1 四维评估框架权重

| 维度 | 代码 | 权重 | 核心问题 |
|---|---|---|---|
| 相对价值 | M1.1 | **30%** | 这只券在同行业/同评级/同期限中处于什么位置？ |
| 条款保护 | M1.2 | **25%** | 发生不利事件时，持有人有什么保护机制？ |
| 流动性 | M1.3 | **20%** | 需要卖出时能不能以合理成本退出？ |
| 事件日历 | M1.4 | **25%** | 未来3个月有哪些可能影响价格的事件？ |

### 2.2 M1.1 相对价值评估（30%）

**判断逻辑**：不只看绝对收益率，而是将个券置于可比集合中比较。

**核心评估指标**：

| 指标 | 优先级 | 数据可得性 | 替代方案 |
|---|---|---|---|
| 税前YTM | 必选 | ✅ 公开 | — |
| 转股溢价率（可转债） | 必选 | ✅ 公开 | — |
| Z-spread / OAS | 优选 | ❌ 需Wind/Choice付费 | YTM + 同评级利差对比 |
| 修正久期 + 凸性 | 优选 | ❌ 需付费终端 | 期限结构替代 |
| 同行业可比利差 | 必选 | ✅ 公开 | 需自行整理 |
| 同评级利差中位数 | 必选 | ✅ 公开 | — |
| 纯债价值/到期赎回价 | 必选 | ✅ 公开 | — |
| 下修状态与历史 | 必选 | ✅ 公开 | — |

**评分逻辑**：

```
相对价值评分 = f(
  税前YTM vs 可比集合,        # 越高越便宜
  转股溢价率,                 # 越低越有股性价值
  纯债价值/债底保护,          # 越高越安全
  利差 vs 同评级中位数,       # 超额利差越大越便宜
  下修历史善意度               # 曾下修=未来下修概率更高
)
```

**关键阈值**：
- 转股溢价率 < 10% → 强股性，加分
- 转股溢价率 > 100% → 深度价外，大幅扣分
- YTM为负但AAA评级 → 安全垫溢价，需单独标注
- 超额利差 > 50bp vs 同评级中位数 → 市场定价隐含风险信号

### 2.3 M1.2 条款保护评估（25%）

**判断逻辑**：评估持有人的法律保护强度——不是条款的有无，而是条款在压力情景下的实际保护力。

**评估维度**：

| 子项 | 权重 | 评估标准 | 扣分条件 |
|---|---|---|---|
| 下修保护 | 30% | 下修记录（频率/幅度/时机）、下修触发条件 | 多次触发但从未下修→大幅扣分；董事会自由裁量权（非强制）→减分 |
| 回售保护 | 25% | 回售触发价格、回售窗口距离、回售价格（面值+利息 vs 市场价） | 回售价格仅面值+利息→持有人承担价差损失；距触发价格远→保护虚置 |
| 交叉违约条款 | 25% | 条款存在性、触发门槛、宽限期、持有人会议执行力 | 无交叉违约→零分；门槛过高（如5,000万+30日宽限期）→大幅减分 |
| 担保/增信 | 20% | 担保方资质、担保比例、资产抵质押覆盖 | 无担保纯信用→扣分；担保方与发行人关联→额外扣分 |

**可转债条款的四个核心缺陷**（所有已评估案例均存在）：
1. 下修是董事会自由裁量权，法律上无强制义务
2. 回售价格仅面值+利息（~100.60元），远低于持有人成本
3. 大部分可转债未设置交叉违约条款——发行人即使其他债券违约，转债持有人无权加速到期
4. 无财务承诺、无资产出售限制——理论上发行人可以把核心资产卖光

**评分区间（光伏可转债案例实测）**：

| 评分区间 | 含义 | 示例 |
|---|---|---|
| 7.0-10.0 | 保护充分 | 晶澳转债（两次主动下修 + 转股价值高） |
| 5.0-6.9 | 中等保护 | 天23转债（已下修 + 到期赎回115元债底） |
| 3.0-4.9 | 保护薄弱 | 晶能转债（股性价内但无下修记录） |
| 0-2.9 | 几乎无保护 | 通22转债（从未下修 + 转股价值33元 + 无交叉违约） |

### 2.4 M1.3 流动性评估（20%）

**判断逻辑**：评估在压力情景下以合理成本退出的能力。

**评估指标**：

| 指标 | 优先级 | 数据可得性 | 说明 |
|---|---|---|---|
| 日均成交额 | 必选 | ✅ 公开（交易所数据） | 最近3个月日均成交金额 |
| 近3月成交总量 | 必选 | ✅ 公开 | 总量越高流动性越好 |
| 换手率 | 必选 | ✅ 公开 | 日均换手率 = 成交金额 / 余额 |
| 异常成交量事件 | 可选 | ✅ 公开 | 单日异常放量/缩量 |
| Bid-Ask spread | 优选 | ❌ 中国交易所不披露 | 无法获取，用成交活跃度替代 |
| 做市商覆盖名单 | 优选 | ❌ 需付费终端 | 无法获取 |
| 最优报价深度 | 优选 | ❌ 需付费终端 | 无法获取 |

**流动性评级**（光伏可转债实测标准）：

| 日均成交额 | 换手率 | 评级 |
|---|---|---|
| >2亿 | >3% | ★★★★★ 最优 |
| 1.0-2.0亿 | 2-3% | ★★★★ 中等偏上 |
| 0.5-1.0亿 | 1-2% | ★★★ 中等 |
| 0.3-0.5亿 | 0.5-1.0% | ★★ 偏弱 |
| <0.3亿 | <0.5% | ★ 极差 |

### 2.5 M1.4 事件日历（25%）

**判断逻辑**：未来3个月内可能影响个券价格或信用质量的事件清单，按影响程度分级。

**事件四级分类**：

| 类别 | 示例 | 影响等级 |
|---|---|---|
| **公司事件** | 财报发布、评级调整、下修触发/决议、回售窗口、管理层变更 | 高 |
| **行业事件** | 政策出台/变更、行业价格数据、央企集采结果、出口退税调整 | 高/中 |
| **宏观事件** | LPR/MLF操作、政治局会议、美联储FOMC、CPI/PMI数据 | 中 |
| **市场事件** | 新债发行供给、资金面变化、信用事件传染 | 中/低 |

**时间窗口要求**：未来3个月以月为单位分层，每层内以日期排序。

| 月份 | 重点事件类型 |
|---|---|
| 第1个月（T+0至T+30日） | 下修触发/回售窗口/公司公告 |
| 第2个月（T+30至T+60日） | 中报/季报集中披露、评级跟踪期 |
| 第3个月（T+60至T+90日） | 宏观政策窗口、信用评级集中调整期 |

### 2.6 M1综合评分与投资建议

```
M1综合评分 = M1.1相对价值×30% + M1.2条款保护×25% + M1.3流动性×20% + M1.4事件日历×25%
```

| 综合评分区间 | 投资建议 | 含义 |
|---|---|---|
| 7.0-10.0 | 可考虑 | 四维均衡偏强，核心风险可控 |
| 5.0-6.9 | 中性/谨慎 | 有显著优势也有明显短板 |
| 3.0-4.9 | 谨慎/回避 | 关键维度存在重大风险 |
| 0-2.9 | 回避 | 多维度处于末位，不建议持有 |

**相对优势排序方法**：在同行业/同评级/同期限的债券集合中，按综合评分排序，标注每只券的定价判断（最贵/偏贵/合理偏高/相对合理/最优）。

---

## 三、跨身份交叉对比方法论

### 3.1 三身份并行评估框架（华晨案例验证）

在分析基准时点（T0），同时对同一信用主体从三个身份视角独立评估，然后交叉对比。

**三个基础身份**：

| 身份 | 代号 | 分析框架 | 核心输出 |
|---|---|---|---|
| 信贷审批（银行分支行） | M0 | 5步决策链：主体准入→用途审查→还款来源→抵押担保→定价条件 | 核准条件清单（金额/期限/利率/抵押/保护条款） |
| 债券投资（固收基金经理） | M1 | 四维框架：相对价值+条款保护+流动性+事件日历 | 综合评分（/10）+ 持仓操作建议 |
| 交易+组合风控（交易员/风控总监） | M3+M4 | 市场环境分析 + 压力测试 + 风险限额 | 交易策略 + 风控限额 + 压力损失表 |

### 3.2 交叉对比矩阵结构

| 对比维度 | M0 信贷审批 | M1 债券投资 | M3+M4 交易+风控 |
|---|---|---|---|
| **核心结论** | 有条件同意 / 拒绝 | 强烈回避 / 中性 / 可考虑 | 减仓 / 维持 / 增持 |
| **决策时域** | 1-3年 | 6个月-3年 | 日内-季度 |
| **首要关注** | 抵押物+第二还款来源 | 利差+条款保护+流动性 | Carry收益+尾部风险+对冲可得性 |
| **最关键数据凭据** | 母公司负债率 / 现金流 / 抵押物价值 | 利差对比 / 条款细则 / 流动性指标 | Carry / 对冲工具可得性 / VaR |
| **最致命发现** | 母公司已资不抵债 / 第一来源不可靠 | AAA掩盖D级信用 / 无回售锁定 | 高Carry是结构陷阱 / 无工具对冲 |
| **盲区** | 被AAA+国企身份安抚 | 被高票息吸引 | 只看Carry忽视尾部风险 |
| **被另一身份补偿的盲区** | → 债券投资者的条款分析揭示无担保=无保护 | → 信贷官的母公司报表分析揭示合并AAA=母公司D级 | → 风控压力测试揭示S3场景损失额 |

### 3.3 三身份对比的共识与分歧处理

**共识场景**（三个身份结论一致）：
- **均为负面**（强烈回避 + 拒绝 + 减仓）→ 信用风险确凿，无需进一步验证
- **均为正面** → 可考虑投资，但需留意集体盲区

**分歧场景**（结论不一致）：

| 分歧模式 | 含义 | 优先级原则 |
|---|---|---|
| M0拒绝但M1中性 | 贷款标准更严，债券可能仍可交易 | 以M1为主（债券投资者风险偏好更高） |
| M1回避但M0有条件同意 | 债券定价比贷款更敏感 | 以M1为准（市场定价比银行内部评估更前置） |
| M3+M4强烈减仓但M0/M1中性 | 市场已经在提前定价 | 以M3+M4为准（市场信号领先于静态分析） |

---

## 四、多身份并行评估的标准流程

### 4.1 五步流程

```
Step 1: 数据准备（所有身份共享）
  ├── 确定分析时点 T0
  ├── 声明该时点已公开可获取的数据集（精确到文件/公告/报告）
  ├── 标注数据来源和时戳
  └── 输出：共享数据清单

Step 2: 身份间独立评估（并行）
  ├── M0: 5步信贷决策链
  ├── M1: 四维债券投资框架
  ├── (可选) M2/M3/M4/M5: 对应框架
  └── 约束：各身份之间不交换信息（避免交叉污染）

Step 3: 交叉对比
  ├── 构建三身份（或N身份）对比矩阵
  ├── 标记共识点和分歧点
  └── 对每个分歧点标注"被另一身份补偿的盲区"

Step 4: 马赛克完备性报告
  ├── 每个身份的信号密度（%）
  ├── 每个身份的置信度（低/中/中高/高）
  ├── 关键数据缺口列表
  └── 缺口→替代手段映射

Step 5: 综合输出
  ├── 共识判断（如果有）
  ├── 分歧判断（含盲区分析）
  ├── 预警窗口估计（从T0到可能的信用事件）
  └── 分身份的行动建议
```

### 4.2 流程约束

1. **数据必须严格限定在分析时点已公开的范围内**——不能使用事后信息或倒推
2. **各身份独立评估**——每个身份的评估不受其他身份结论影响
3. **马赛克完备性报告必须随附**——每个身份给出信号密度和置信度
4. **盲区必须标注**——每个身份固有的认知盲区，以及被其他身份弥补的方式

### 4.3 华晨案例验证的关键发现（2018.12.31分析时点）

| 指标 | 数值 |
|---|---|
| 分析时点 | 2018-12-31 |
| 首次违约日 | 2020-10-23 |
| 预警窗口 | **22个月** |
| 数据源限制 | 100%当时已公开数据 |
| M0信贷审批结论 | 有条件同意（仅限抵押贷款，5亿上限，1年期限） |
| M1债券投资结论 | **强烈回避（2.75/10）** |
| M3+M4交易风控结论 | **减仓至0.5%以下，缩短久期** |
| 马赛克引擎内部评分 | **1.25/10（D级）** vs 外部评级AAA/稳定 |
| 数据完备性 | 信贷72% / 债券73% / 交易58% |

---

## 五、未覆盖身份的扩展规划

### 5.1 P1优先级（4周迭代）

| 模块 | 子模块 | 数据源 |
|---|---|---|
| **M2 债券承销** | M2.1 投资人画像 | 公募基金季报、理财子公告 |
| | M2.2 可比发行 | Wind公开数据、发行公告 |
| | M2.3 发行窗口判断 | 公开利率数据 + 一级发行公告 |
| **M3 市场交易** | M3.1 资金面仪表盘 | 公开市场操作数据（DR007/R007/Shibor） |
| | M3.2 信用-利率联动 | 公开收益率数据 |
| | M3.3 跨市场信号 | 各市场公开数据 |

### 5.2 P2优先级（4周迭代）

| 模块 | 子模块 | 限制说明 |
|---|---|---|
| **M4 组合风控** | M4.1 组合集中度 | 只做通用分析，不做具体组合数据 |
| | M4.2 压力测试框架 | 历史数据+公开数据 |
| | M4.3 尾部风险扫描 | LLM推理+历史案例 |
| **M5 企业融资** | M5.1 融资成本对比 | 公开利率+发行利率+调研 |
| | M5.2 期限匹配诊断 | 年报数据可计算 |
| | M5.3 评级迁移预测 | 基于金字塔框架输出 |

### 5.3 优先级评估标准

每个未覆盖模块按三维度评估：

| 维度 | 含义 |
|---|---|
| **P 贴近度** | 与当前框架的距离——越低越容易做 |
| **V 差异化** | 与现有工具（Wind/Bloomberg/评级报告）的差异——越高越有竞争力 |
| **D 数据可得性** | 公开数据能否支撑——越高越容易POC |

| 模块 | P贴近度 | V差异化 | D数据可得 | 优先级 | 理由 |
|---|---|---|---|---|---|
| M1 债券投资·四维 | ★★★★ | ★★★★ | ★★★★ | **P0** | 最贴近，公开数据可获取 |
| M3 市场交易 | ★★★ | ★★★ | ★★★★ | **P1** | 数据可获取，需建立新分析语言 |
| M2 债券承销 | ★★ | ★★★★★ | ★★★ | **P1** | 差异化最大，部分数据可获取 |
| M4 组合风控 | ★★ | ★★★ | ★★ | **P2** | 需持仓数据，仅能做通用建议 |
| M5 企业融资 | ★ | ★★★★★ | ★★★ | **P2** | 最远但差异化极大 |
| M6 信贷审批·行内 | ★★★★ | ★★ | ★ | **P3** | 数据完全不可获取（银行内部） |
